--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.0.0",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.11.1",
     "dotenv": "^8.2.0",
     "pg": "^7.18.2",
     "reflect-metadata": "^0.1.13",
